fix: remova extra space on wiki-links
use fit-content then wrap in a flexbox so that items are still centered

--- a/silly.css
+++ b/silly.css
@@ -8,6 +8,7 @@
 
 .wiki-link {
     user-select: none;
+    width: fit-content;
 }
 
 .wiki-link:hover {
@@ -45,7 +46,9 @@ body {
 
 .main-content {
     grid-area: main;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
